--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,5 +1,5 @@
 <footer th:fragment="footer">
-    <div class="row featurette" style="margin-top: 25rem">
+    <div class="row featurette">
         <hr class="featurette-divider mt-5">
         <div class="order-md-1" style="text-align: right; color: #8E8D8A;">
             <p>РЕЖИМ РАБОТЫ:<br>
