--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,9 +12,10 @@
     font-size: 1.3em;
     color: #000000;
 }
-a {
+a,p {
     font-family: Century Schoolbook;
 }
+
 .text-muted {
     --bs-text-opacity: 1;
     color: #28a745!important;
@@ -79,8 +80,8 @@ hr {
 .form-input {
     width: 100%;
     height: 45px;
-    border: 1.5px solid #28a745;
-    border-radius: 5px;
+    border: 1.5px solid #8E8D8A;
+    border-radius: 3px;
     outline: none;
     background: #ffffff;
     color: #9E9C9C;
@@ -93,7 +94,7 @@ hr {
     width: 60px;
     height: 45px;
     border: none;
-    background: #28a745;
+    background: #8E8D8A;
     border-radius: 0 5px 5px 0;
     cursor: pointer;
 }
@@ -104,3 +105,49 @@ hr {
     font-size: 16px;
     color: #FFFFFF;
 }
+
+.img-book{
+    border-radius: 70% 30% 70% 30% / 0% 100% 0% 100%;
+}
+.rating-area {
+    overflow: hidden;
+    width: 265px;
+    margin-left: 100px;
+}
+.rating-area:not(:checked) > input {
+    display: none;
+}
+.rating-area:not(:checked) > label {
+    float: right;
+    width: 42px;
+    padding: 0;
+    cursor: pointer;
+    font-size: 32px;
+    line-height: 32px;
+    color: lightgrey;
+    text-shadow: 1px 1px #bbb;
+}
+.rating-area:not(:checked) > label:before {
+    content: '★';
+}
+.rating-area > input:checked ~ label {
+    color: gold;
+    text-shadow: 1px 1px #c60;
+}
+.rating-area:not(:checked) > label:hover,
+.rating-area:not(:checked) > label:hover ~ label {
+    color: gold;
+}
+.rating-area > input:checked + label:hover,
+.rating-area > input:checked + label:hover ~ label,
+.rating-area > input:checked ~ label:hover,
+.rating-area > input:checked ~ label:hover ~ label,
+.rating-area > label:hover ~ input:checked ~ label {
+    color: gold;
+    text-shadow: 1px 1px goldenrod;
+}
+.rate-area > label:active {
+    position: relative;
+}
+
+
